--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,172 @@
-.App {
-  text-align: center;
+body{
+  color: black;    
+  /* background-image: url(img/bg1.jpg); */
+  background-image: url(https://i.redd.it/52f61nfzmwl51.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h1{
+  text-transform: uppercase;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+h1,h2{
+  margin: 0;
+  margin-bottom: 10px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+/* .App-header {
+  font-size: calc(10px + 2vmin);
+} */
+.noselect {
+  -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Old versions of Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome, Edge, Opera and Firefox */
+}
+.App{
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  min-height: 100vh;
+}
+.main_header{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-bottom: 20px;
+  border-bottom: 1px solid lightgrey;
+}
+.main_canvas{
+  background: #f5f6fa;
+  min-height: 500px;
+  width: 100%;
+  max-width: 1000px;
+  border-radius: 15px;
+  padding: 30px 20px;
+  box-sizing: border-box;
+  box-shadow: 0px 0px 20px 0px #31313166;
+  position: relative;
+}
+.overlay_loading{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  left: 0;
+  top: 0;
+  border-radius: 15px;
+  background-color: #4954b9;
+  transition: 0.1s;
+  opacity: 0;
+  z-index: 99;
+  visibility: hidden;
+}
+.overlay_loading.loading{
+  visibility: visible;
+  opacity: 1;
+}
+.canvas_content{
+  padding-top: 20px;
+  /* display: grid;
+  grid-template-columns: 50% 50%; */
+}
+.chain_type{
+  border: 4px solid grey;
+  color: grey;
+  border-radius: 10px;
+  padding: 10px;
+  font-weight: 700;
+}
+.chain_type_1{
+  border-color: green;
+  color: green;
+}
+.chain_type_0{
+  border-color: #4954b9;
+  color: #4954b9;
+}
+.main_btn{
+  padding: 12px 14px;
+  background: #ffffff;
+  border: 3px solid green;
+  border-radius: 7px;
+  font-size: 0.9em;
+  font-weight: 700;
+  color: green;
+  cursor: pointer;
+  transition: 0.2s;
+  outline: none;
+  width: 100%;
+}
+.main_btn:hover{
   color: white;
+  background: green;
+}
+.main_btn:active{
+  background: rgb(28, 153, 28);
 }
 
-.App-link {
-  color: #61dafb;
+.wallet_block{
+  color: white!important;
+  padding: 20px;
+  font-size: 17px;
+  font-weight: 300;
+  word-break: break-word;
+  background-color: #3f51b5!important;
+}
+.balance_value{
+  font-size: 30px;
+  font-weight: 700;
+}
+.address_value{
+  font-size: 15px;
+  font-weight: 700;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+/*=====================FORM======================*/
+.smart_form{
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+form{
+}
+form input{
+  padding: 7px 5px;
+  width: 100%;
+  box-sizing: border-box;
+  font-family: inherit;
+  font-size: 1em;
+}
+
+
+
+
+.MuiBox-root{
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+.MuiDialogContent-root{
+  word-wrap: break-word;
+  min-width: 25vw;
+}
+
+
+/*===================MEDIA==================*/
+
+@media only screen and (max-width: 544px){
+  .main_header{
+    flex-direction: column;
+    row-gap: 10px;
   }
-  to {
-    transform: rotate(360deg);
+  h1{
+    font-size: 25px;
+    text-align: center;
   }
 }
